--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -17,6 +17,6 @@
           .logo.partner
             %img{src:"/web-images/brands/#{index}.jpg"}
 
-#map-container
-  .map-container
-    %iframe{:allowfullscreen => "", :frameborder => "0", :src => "https://www.google.com/maps/embed/v1/place?key=AIzaSyBzjA3FrZHAO7zR6dVahHkPM41lIiSvo2U\n    &q=Space+Needle,Seattle+WA", :style => "border:0", :width => "100%"}
+/ #map-container
+/   .map-container
+/     %iframe{:allowfullscreen => "", :frameborder => "0", :src => "https://www.google.com/maps/embed/v1/place?key=AIzaSyBzjA3FrZHAO7zR6dVahHkPM41lIiSvo2U\n    &q=Space+Needle,Seattle+WA", :style => "border:0", :width => "100%"}
