--- a/app/assets/stylesheets/shared/_tag-search-control.scss
+++ b/app/assets/stylesheets/shared/_tag-search-control.scss
@@ -4,7 +4,6 @@
   @include border-radius;
   display: flex;
   border:1px solid $ccc;
-  background: $white;
   overflow-x: hidden;
 
   .btn-default {
@@ -52,11 +51,13 @@
   }
 
   .react-autosuggest__container {
+    display: flex;
+    width: auto;
 
     input {
-      margin: 0;
-      min-width: rem(140);
       font-family: $body-font;
+      flex:0 0 auto;
+      width: 100%;
     }
 
   }
