searching and sidebar wark

--- a/app/assets/stylesheets/shared/_layout.scss
+++ b/app/assets/stylesheets/shared/_layout.scss
@@ -18,8 +18,7 @@ body {
     }
 
     #sidebar {
-      width: 15%;
-      background: $white;
+      width: rem(220);
     }
 
     #content-area {
