--- a/app/views/home/search.html.haml
+++ b/app/views/home/search.html.haml
@@ -2,7 +2,7 @@
 
 #top-search-container
   .container
-    %label Search Terms
+    %h4 Search Terms
     =react_component('TagSearch', {taggings: all_tags, terms: @search_terms})
 
 #search-results-container
