--- a/app/assets/stylesheets/shared/_sidebar.scss
+++ b/app/assets/stylesheets/shared/_sidebar.scss
@@ -1,14 +1,15 @@
 #sidebar {
   border-right:1px solid $ccc;
+  background: $brand;
 
-  .banding,
   .tag-cluster,
   .links,
   .search {
-    padding: rem(20);
+    padding: rem(10) rem(20);
 
     label {
       display: block;
+      color: $white;
     }
   }
 
@@ -21,9 +22,49 @@
     form input { width: 100%; }
   }
 
-  .tag-cluster {}
+  .tag-cluster {
+    .tags-container {
+      display: flex;
+      flex-wrap: wrap;
+      a {
+        @include border-radius;
+        @include shadow;
+        margin: 0 rem(5) rem(5) 0;
+        background: $blue;
+        color: $white;
+        border: none;
+        padding: rem(5) rem(10);
+        text-decoration: none;
+      }
+    }
+
+
+  }
 
   .links {
-    a { display: block; }
+
+    &.actions {
+      @include border-radius;
+      border:1px solid rgba($white, 0.1);
+      padding: rem(10) rem(10);
+      background: rgba($white, 0.1);
+
+      a:hover > svg { color: $blue; }
+    }
+    a {
+      @include border-radius;
+      display: block;
+      color: $halfwhite;
+      text-decoration: none;
+      transition: all 0.5s;
+      padding: rem(5);
+      background: $trans;
+
+      &:hover {
+        color: $white;
+        background: $halfblack;
+
+      }
+    }
   }
 }
