--- a/app/views/shared/_sidebar.haml
+++ b/app/views/shared/_sidebar.haml
@@ -1,16 +1,38 @@
 #sidebar
-  .banding
-    %a{href:root_path}
-      =render 'shared/logo', {color: 'brand'}
 
   -unless department_tags.empty?
     .tag-cluster
       %label Department tags
-      -department_tags.each do |tag|
-        %a{href:home_search_path(terms:tag.name)}
-          %span.badge.badge-primary{role:'tag'}=tag.name
+      .tags-container
+        -department_tags.each do |tag|
+          %a{href:home_search_path(terms:tag.name)}
+            %span{role:'tag'}=tag.name
+
+  .links.actions
+    %label Actions
+    %a{href: home_search_path(terms:'')}
+      %span.fa.fa-search.mr-1
+      Search
+    %a{href: '#'}
+      %span.fa.fa-file-alt.mr-1
+      Add a Post
+    %a{href: '#'}
+      %span.fa.fa-building.mr-1
+      Add a Department
+    %a{href: '#'}
+      %span.fa.fa-user-circle.mr-1
+      Add a Teammate
 
   .links
     %label Departments
     -get_departments.each do |dept|
       %a{href: department_path(dept)}=dept.department_name
+
+  .links
+    %label Resources
+    %a{href: '#'} FAQs
+    %a{href: '#'}
+      Jobs
+      %span.badge.badge-warning.ml-1 New
+    %a{href: '#'} Forms
+    %a{href: '#'} Leadership
