updating the views with finished styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,6 +8,10 @@
 @import "shared/footer";
 @import "shared/homepage";
 @import "shared/searchpage";
+@import "shared/departmentpage";
+@import "shared/postpages";
+@import "shared/userpages";
 @import "shared/layout";
 
+// Add to HASG
 .btn-success { color: $white; }
