--- a/app/views/departments/edit.html.haml
+++ b/app/views/departments/edit.html.haml
@@ -1,5 +1,6 @@
-%h1 Editing Department
-= render 'form', department: @department
-= link_to 'Show', @department
-|
-\#{link_to 'Back', departments_path}
+#department-form-view
+  %h1 Editing Department
+  = render 'form', department: @department
+  = link_to 'Show', @department
+  |
+  \#{link_to 'Back', departments_path}
