--- a/app/views/departments/new.html.haml
+++ b/app/views/departments/new.html.haml
@@ -1,3 +1,4 @@
-%h1 New Department
-= render 'form', department: @department
-= link_to 'Back', departments_path
+#department-form-view
+  %h1 New Department
+  = render 'form', department: @department
+  = link_to 'Back', departments_path
