--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,3 +1,4 @@
-%h1 New Post
-= render 'form', post: @post
-= link_to 'Back', posts_path
+#post-form-view
+  %h1 New Post
+  = render 'form', post: @post
+  = link_to 'Back', posts_path
