--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,6 +9,11 @@
   %p
     %strong Title:
     = @user.title
+
+  = @user.bio.html_safe
+
+  = @user.tag_names
+
   %p
     %strong Department:
     = @user.department
