adding user assets. navbar cleanup. helper fixes. sidebar adjustments.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,12 @@
 
 // Add to HASG
 .btn-success { color: $white; }
+
+#application-bar .avatar {
+  @include border-radius($round);
+  width: rem(40);
+  height: rem(40);
+  overflow: hidden;
+  display: block;
+  img { width: 100% }
+}
