--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,22 +1,20 @@
 %p#notice= notice
 #user-detail-view
-  %p
-    %strong Name:
-    = @user.name
-  %p
-    %strong Email:
-    = @user.email
-  %p
-    %strong Title:
-    = @user.title
+  .avatar
+    %img{src:@user.photo_url}
 
-  = @user.bio.html_safe
+  .information
+    %h3= @user.name
+    %p= @user.title
+    %p= @user.department.department_name
+    %a{href:"mailto: #{@user.email}"} Email me
 
-  = @user.tag_names
+  .bio
+    = @user.bio.html_safe
 
-  %p
-    %strong Department:
-    = @user.department
+  .tags
+    = @user.tag_names
+
   = link_to 'Edit', edit_user_path(@user)
   |
   \#{link_to 'Back', users_path}
