--- a/app/views/home/_welcome.haml
+++ b/app/views/home/_welcome.haml
@@ -2,7 +2,7 @@
   .container
     .welcome-message
       %span Welcome to Hendrick IT
-      %span.highlight where we pride ourselves
+      %span.highlight We pride ourselves
       %span on wire management.
 
       .action
