--- a/app/views/shared/_sidebar.haml
+++ b/app/views/shared/_sidebar.haml
@@ -31,7 +31,7 @@
   .links
     %label Resources
     %a{href: '#'}
-      Jobs
+      Careers
       %span.badge.badge-warning.ml-1 New
     %a{href: '#'} FAQs
     %a{href: '#'} How-Tos
