--- a/app/views/departments/_form.html.haml
+++ b/app/views/departments/_form.html.haml
@@ -13,7 +13,7 @@
     = form.text_field :department_name, id: :department_department_name, class:'form-control form-control-lg'
 
   .form-group
-    = form.label :mission
+    = form.label :mission, 'Mission Statement'
     = form.text_field :mission, id: :department_mission, class:'form-control form-control-lg'
 
   .form-group.tags
