--- a/app/views/departments/show.html.haml
+++ b/app/views/departments/show.html.haml
@@ -3,28 +3,35 @@
   %p.lead
     = @department.mission
     %a{href: edit_department_path(@department)} Edit department
-#department-post-list
-  .post-list-filter-container
-    %ul.nav.nav-pills
-      %li.nav-item
-        %a.nav-link.active{:href => "#"} All Posts
-      %li.nav-item
-        %a.nav-link{:href => "#"} Announcements
-      %li.nav-item
-        %a.nav-link{:href => "#"} FAQs
-      %li.nav-item
-        %a.nav-link{:href => "#"} How-Tos
-      %li.nav-item
-        %a.nav-link{:href => "#"} Forms
-      %li.nav-item
-        %a.nav-link{:href => "#"} Leadership
 
-  %ul.list-group-flush.list-group
-    -@posts.each do |post|
-      %li.list-group-item
-        =link_to post_path(post) do
-          %b=truncate(post.title, length: 50)
-        %b=post.updated_at.strftime("%a %b %e, %y")
-        %p
-          =truncate(post.details, length: 200)
-          %a{href: post_path(post)} more
+
+#department-post-list
+  =react_component('DepartmentPosts', {posts: @posts})
+
+/   .post-list-filter-container
+/     %ul.nav.nav-pills
+/       %li.nav-item
+/         %a.nav-link.active{:href => "#"} All Posts
+/       %li.nav-item
+/         %a.nav-link{:href => "#"} Announcements
+/       %li.nav-item
+/         %a.nav-link{:href => "#"} FAQs
+/       %li.nav-item
+/         %a.nav-link{:href => "#"} How-Tos
+/       %li.nav-item
+/         %a.nav-link{:href => "#"} Forms
+/       %li.nav-item
+/         %a.nav-link{:href => "#"} Leadership
+
+/     .filter-field
+/       %input.form-control{type:'text', placeholder:'Search'}
+
+/   %ul.list-group-flush.list-group
+/     -@posts.each do |post|
+/       %li.list-group-item
+/         =link_to post_path(post) do
+/           %b=truncate(post.title, length: 50)
+/         %b=post.updated_at.strftime("%a %b %e, %y")
+/         %p
+/           =truncate(post.details, length: 200)
+/           %a{href: post_path(post)} more
