updating the posts ui and department js compo

--- a/app/assets/stylesheets/shared/_colors.scss
+++ b/app/assets/stylesheets/shared/_colors.scss
@@ -17,6 +17,7 @@ $brand:$brand-blue;
 $blue:#2d98f9;
 $indigo:#3F51B5;
 $violet:#673AB7;
+$purple:$violet;
 $trans:transparent;
 $navy:#063850;
 $teal:#50E3C2;
