updating the paths to the 3rd party css

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,11 @@
 @import "shared/colors";
 @import "shared/vars";
 @import "shared/mixins";
+
+// 3rd Party Components
+@import "react-draft-wysiwyg/dist/react-draft-wysiwyg.css";
+@import "react-tagsinput/react-tagsinput.css";
+
 @import "shared/application-bar";
 @import "shared/tag-search-control";
 @import "shared/forms";
