fixing the css imports

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,12 @@
 @import "shared/vars";
 @import "shared/mixins";
 @import "shared/application-bar";
+
+
+// 3rd Party Components
+@import "vendor/react-draft-wysiwyg";
+@import "vendor/react-tagsinput";
+
 @import "shared/tag-search-control";
 @import "shared/forms";
 @import "shared/sidebar";
