--- a/app/views/shared/_sidebar.haml
+++ b/app/views/shared/_sidebar.haml
@@ -11,16 +11,16 @@
   .links.actions
     %label Actions
     %a{href: home_search_path(terms:'')}
-      %span.fa.fa-search.mr-1
+      %span.fa.fa-plus.mr-1
       Search
     %a{href: new_post_path}
-      %span.fa.fa-file-alt.mr-1
+      %span.fa.fa-plus.mr-1
       Add a Post
     %a{href: new_department_path}
-      %span.fa.fa-building.mr-1
+      %span.fa.fa-plus.mr-1
       Add a Department
     %a{href: new_user_path}
-      %span.fa.fa-user-circle.mr-1
+      %span.fa.fa-plus.mr-1
       Add a Teammate
 
   .links
