--- a/app/assets/stylesheets/shared/_forms.scss
+++ b/app/assets/stylesheets/shared/_forms.scss
@@ -37,14 +37,17 @@
 
 .post-type-container {
   display: flex;
+  flex-wrap: wrap;
 
   .post-type {
-    flex: 1 1 auto;
+    flex: 0 0 auto;
     text-align: center;
-
+    width: 30%;
     border: 1px solid $light;
     margin: rem(10);
     padding: rem(10);
+
+    img { width: 50% }
 
     input[type='radio'] {
       width: rem(20);
