--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -21,54 +21,65 @@
   .form-group
     = form.label :post_type, "Choose the type of post you'd like to create."
     .post-type-container
+
       / Announcement
+      .post-type
+        %label{for:"pt-0"}
+          %img{src:"/admin-images/post-type-0.png"}
+          .description
+            %p
+              %span.bold Important Anouncement.
+              Everyone will be notified as soon as they visit the Hendrick IT website.
+          %input.form-control{name:'post[post_type]', value: 0, type:'radio', id:"pt-0"}
+
+      / FAQ
       .post-type
         %label{for:"pt-1"}
           %img{src:"/admin-images/post-type-1.png"}
           .description
             %p
-              %span.bold Important Anouncement.
-              Everyone will be notified as soon as they visit the Hendrick IT website.
+              %span.bold FAQ.
+              Avoid answering the same questions by adding the most common ones here.
           %input.form-control{name:'post[post_type]', value: 1, type:'radio', id:"pt-1"}
 
-      / FAQ
+      / How To
       .post-type
         %label{for:"pt-2"}
           %img{src:"/admin-images/post-type-2.png"}
           .description
             %p
-              %span.bold FAQ.
-              Avoid answering the same questions by adding the most common ones here.
-          %input.form-control{name:'post[post_type]', value: 1, type:'radio', id:"pt-2"}
+              %span.bold How-To.
+              Write a brief tutorial and help your teammates troubleshoot any issue.
+          %input.form-control{name:'post[post_type]', value: 2, type:'radio', id:"pt-2"}
 
-      / How To
+      / Links
       .post-type
         %label{for:"pt-3"}
           %img{src:"/admin-images/post-type-3.png"}
           .description
             %p
-              %span.bold How-To.
-              Write a brief tutorial and help your teammates troubleshoot any issue.
+              %span.bold Links &amp; Forms.
+              Gather and share resources like URLs and forms.
           %input.form-control{name:'post[post_type]', value: 3, type:'radio', id:"pt-3"}
 
-      / Links
+      / Updates
       .post-type
         %label{for:"pt-4"}
           %img{src:"/admin-images/post-type-4.png"}
           .description
             %p
-              %span.bold Links &amp; Forms.
-              Gather and share resources like URLs and forms.
+              %span.bold Department Update.
+              Anything interesting happening in your department? Write a brief post to let everyone know about it.
           %input.form-control{name:'post[post_type]', value: 4, type:'radio', id:"pt-4"}
 
-      / Updates
+      / Jobs
       .post-type
         %label{for:"pt-5"}
           %img{src:"/admin-images/post-type-5.png"}
           .description
             %p
-              %span.bold Department Update.
-              Anything interesting happening in your department? Write a brief post to let everyone know about it.
+              %span.bold Job Post.
+              Have a position you'd like to promote internally? Post it here to see who will step up.
           %input.form-control{name:'post[post_type]', value: 5, type:'radio', id:"pt-5"}
 
 
