--- a/app/views/departments/show.html.haml
+++ b/app/views/departments/show.html.haml
@@ -1,5 +1,5 @@
 #department-intro
-  %h1= @department.department_name
+  %h1= @department.name
   %p.lead
     = @department.mission
     %a{href: edit_department_path(@department)} Edit department
