--- a/app/views/shared/_sidebar.haml
+++ b/app/views/shared/_sidebar.haml
@@ -26,7 +26,7 @@
   .links
     %label Departments
     -get_departments.each do |dept|
-      %a{href: department_path(dept)}=dept.department_name
+      %a{href: department_path(dept)}=dept.name
 
   .links
     %label Resources
